# edgetech-daisy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  daisy-wo-mqtt.env  daisy.env  docker-compose-wo-mqtt.yml  docker-compose.yaml  docker-compose.yml  example.env
.github/workflows/: docker-build.yaml  dockerbuild.yml  release-tag.yaml
daisy/: Dockerfile  dAISy.py  dAISy_pub_sub.py  pyproject.toml  requirements.txt
